objects/ASI_CRM_Promotion_Status__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account_Address__c</fullName>
        <formula>ASI_CRM_Account__r.ASI_HK_CRM_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Account_Phone__c</fullName>
        <formula>ASI_CRM_Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (TW)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Potential Outlet (TH), Outlet (TH)</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotion Status</relationshipLabel>
        <relationshipName>Promotion_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel__c</fullName>
        <formula>TEXT( ASI_CRM_Account__r.ASI_HK_CRM_Channel__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Code__c</fullName>
        <formula>ASI_CRM_Account__r.ASI_KOR_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Outlet_Image__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_TH_CRM_OutletImage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Outlet Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Outlet_Type__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_TH_CRM_OutletType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Outlet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Sales_Potential__c</fullName>
        <formula>TEXT(ASI_CRM_Customer__r.ASI_CRM_Sales_Potential__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Sales Potential</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Promotion Status</relationshipLabel>
        <relationshipName>Promotion_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Draft_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Draft Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GWP_Allocation__c</fullName>
        <label>GWP Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Grade__c</fullName>
        <formula>TEXT(ASI_CRM_Customer__r.ASI_CRM_CN_Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Account_Number__c</fullName>
        <formula>ASI_CRM_Account__r.ASI_HK_CRM_JDE_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDE Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Activities__c</fullName>
        <formula>IF( 
AND(OR(CONTAINS(TEXT(ASI_CRM_Promotion__r.ASI_CRM_Type__c),&quot;Tasting&quot;),
CONTAINS(TEXT(ASI_CRM_Promotion__r.ASI_CRM_Type__c),&quot;Event&quot;)),
OR(ISPICKVAL(ASI_CRM_Status__c, &apos;Agreed&apos;),
ISPICKVAL(ASI_CRM_Status__c, &apos;Proposed&apos;),
ISPICKVAL(ASI_CRM_Status__c, &apos;Done&apos;))), 
1, 0
)</formula>
        <label>No. of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offer_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offer Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>ASI_HK_CRM_Promotion__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Channel Promotion</value>
            </filterItems>
            <filterItems>
                <field>ASI_HK_CRM_Promotion__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI TH CRM National</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_HK_CRM_Promotion__c</referenceTo>
        <relationshipLabel>Promotion Status</relationshipLabel>
        <relationshipName>Promotion_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSM__c</fullName>
        <formula>Owner:User.LastName +&apos; &apos;+ Owner:User.Manager.FirstName</formula>
        <label>RSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region_Sharing__c</fullName>
        <label>Region (Sharing)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <formula>TEXT( ASI_CRM_Account__r.ASI_TH_CRM_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Agreed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (TW), Wholesaler (TW)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotion Status (Supplier)</relationshipLabel>
        <relationshipName>Promotion_Status1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Task__c</fullName>
        <label>Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Display Setup</fullName>
                    <default>true</default>
                    <label>Display Setup</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Unit__c</fullName>
        <label>Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VisitationPlanDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitation Plan Detail</label>
        <referenceTo>ASI_HK_CRM_Visitation_Plan_Detail__c</referenceTo>
        <relationshipLabel>Promotion Status</relationshipLabel>
        <relationshipName>Promotion_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_Target__c</fullName>
        <label>Volume Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Promotion Status</label>
    <listViews>
        <fullName>ASI_CRM_TW_Promotion_Status</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Promotion__c</columns>
        <columns>ASI_CRM_Account__c</columns>
        <columns>ASI_CRM_Unit__c</columns>
        <columns>ASI_CRM_Supplier__c</columns>
        <columns>ASI_CRM_Confirmed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_Status__c.ASI_CRM_TW_PromotionStatus</value>
        </filters>
        <label>TW Promotion Status</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}{0000}</displayFormat>
        <label>Promotion Status Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Status</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TH_PromotionStatus</fullName>
        <active>true</active>
        <label>ASI CRM TH Promotion Status</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_PromotionStatus</fullName>
        <active>true</active>
        <label>TW Promotion Status</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>